# wechat-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml.example  docker-compose.yml
.github/workflows/: auto-tag.yml  docker-image.yml  rust.yml
.qwen/skills/default-branch-migration/: SKILL.md
.qwen/skills/ghcr-setup/: SKILL.md
.qwen/skills/github-actions-secrets/: SKILL.md
.qwen/skills/rust-ci-fix-and-pr/: SKILL.md
src/: admin.rs  api.rs  crypto.rs  main.rs  wechat.rs
src/admin/: handlers.rs  mod.rs  ui.rs
src/monitor/: metrics.rs  mod.rs
src/notify/: email.rs  mod.rs  sms.rs  webhook.rs
src/storage/: mod.rs  postgres.rs  redis_store.rs
