[package]
name = "wechat-rs"
version = "0.3.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal", "net", "io-util", "time"] }
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
quick-xml = { version = "0.31", features = ["serialize"] }
sha1 = "0.10"
hex = "0.4"
bcrypt = "0.15"
jsonwebtoken = "9.3"
base64 = "0.22"
aes = "0.8"
cbc = "0.1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sysinfo = "0.30"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
